force-app/main/default/objects/Product2/fields/Adventure_Rating__c.field-meta.xml
<CustomField>
    <fullName>Adventure_Rating__c</fullName>
    <label>Adventure Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(1) Easy Rider</fullName>
            </value>
            <value>
                <fullName>(2) Moderate Challenge</fullName>
            </value>
            <value>
                <fullName>(3) Thrill-Seeker</fullName>
            </value>
            <value>
                <fullName>(4) Code Habanero Alert</fullName>
            </value>
            <value>
                <fullName>(5) Adrenaline Junkie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>