force-app/main/default/objects/Product2/fields/Boat_Dive__c.field-meta.xml
<CustomField>
    <fullName>Boat_Dive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boat Dive</label>
    <type>Checkbox</type>
</CustomField>