force-app/main/default/objects/Product2/fields/Canyoneering__c.field-meta.xml
<CustomField>
    <fullName>Canyoneering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canyoneering</label>
    <type>Checkbox</type>
</CustomField>