force-app/main/default/objects/Product2/fields/Day_Trip__c.field-meta.xml
<CustomField>
    <fullName>Day_Trip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day Trip</label>
    <type>Checkbox</type>
</CustomField>