force-app/main/default/objects/Product2/fields/Duration_Nights__c.field-meta.xml
<CustomField>
    <fullName>Duration_Nights__c</fullName>
    <label>Duration (Nights)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>