force-app/main/default/objects/Product2/fields/Gear_Rental_Available__c.field-meta.xml
<CustomField>
    <fullName>Gear_Rental_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gear Rental Available</label>
    <type>Checkbox</type>
</CustomField>