force-app/main/default/objects/Product2/fields/Lead_Marketer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Marketer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Marketer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Adventures</relationshipLabel>
    <relationshipName>Adventures</relationshipName>
    <type>Lookup</type>
</CustomField>