force-app/main/default/objects/Product2/fields/Max_Participants__c.field-meta.xml
<CustomField>
    <fullName>Max_Participants__c</fullName>
    <label>Max Participants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>