force-app/main/default/objects/Product2/fields/Min_Cert_Needed__c.field-meta.xml
<CustomField>
    <fullName>Min_Cert_Needed__c</fullName>
    <label>Min Cert Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open Water</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Advanced Open Water</fullName>
            </value>
            <value>
                <fullName>Rescue</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>