force-app/main/default/objects/Product2/fields/Minimum_Age__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Age__c</fullName>
    <label>Minimum Age</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Ages Welcome</fullName>
            </value>
            <value>
                <fullName>7+</fullName>
            </value>
            <value>
                <fullName>12+</fullName>
            </value>
            <value>
                <fullName>16+</fullName>
            </value>
            <value>
                <fullName>18+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>