force-app/main/default/objects/Product2/fields/Needs_Lead_Certification__c.field-meta.xml
<CustomField>
    <fullName>Needs_Lead_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Lead Certification</label>
    <type>Checkbox</type>
</CustomField>