force-app/main/default/objects/Product2/fields/Needs_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Needs_Waiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Waiver</label>
    <type>Checkbox</type>
</CustomField>