force-app/main/default/objects/Product2/fields/Permits_Needed__c.field-meta.xml
<CustomField>
    <fullName>Permits_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permits Needed</label>
    <type>Checkbox</type>
</CustomField>