force-app/main/default/objects/Product2/fields/Porters__c.field-meta.xml
<CustomField>
    <fullName>Porters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Porters</label>
    <type>Checkbox</type>
</CustomField>