force-app/main/default/objects/Product2/fields/Route_Type__c.field-meta.xml
<CustomField>
    <fullName>Route_Type__c</fullName>
    <label>Route Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Top Rope</fullName>
            </value>
            <value>
                <fullName>Sport Climbing</fullName>
            </value>
            <value>
                <fullName>Trad Climbing</fullName>
            </value>
            <value>
                <fullName>Bouldering</fullName>
            </value>
            <value>
                <fullName>Multi-Pitch Climb</fullName>
            </value>
            <value>
                <fullName>Psicobloc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>