force-app/main/default/objects/Product2/fields/Shore_Dive__c.field-meta.xml
<CustomField>
    <fullName>Shore_Dive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shore Dive</label>
    <type>Checkbox</type>
</CustomField>