force-app/main/default/objects/Product2/fields/Special_Crew_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Crew_Requests__c</fullName>
    <label>Special Crew Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>