force-app/main/default/objects/Product2/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>