force-app/main/default/objects/Product2/fields/Types_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Types_Accepted__c</fullName>
    <label>Types Accepted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PADI</fullName>
            </value>
            <value>
                <fullName>NAUI</fullName>
            </value>
            <value>
                <fullName>SSI</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>